--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ backend/frontend-build/
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
+.env.production.corrected
+.env.production.example
 
 # Logs
 logs/
