--- a/backend/env.production.example
+++ b/backend/env.production.example
@@ -9,7 +9,7 @@ ENABLE_SWAGGER=false
 ENABLE_LOGGING=true
 
 # Database Configuration
-MONGODB_URI=mongodb+srv://osamagivegh:990099@cluster0.npzs81o.mongodb.net/booking4u?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://USERNAME:PASSWORD@cluster0.npzs81o.mongodb.net/booking4u?retryWrites=true&w=majority&appName=Cluster0
 
 DB_MAX_POOL_SIZE=20
 DB_SERVER_SELECTION_TIMEOUT=10000
